--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
